Refactor products service
