# product-api/handlers/put.go
@@ -20,11 +20,11 @@ func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
 
 	// fetch the product from the context
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
-	p.l.Println("[DEBUG] updating record id", prod.ID)
+	p.l.Debug("Updating record id", prod.ID)
 
-	err := data.UpdateProduct(prod)
+	err := p.productDB.UpdateProduct(prod)
 	if err == data.ErrProductNotFound {
-		p.l.Println("[ERROR] product not found", err)
+		p.l.Error("Product not found", err)
 
 		rw.WriteHeader(http.StatusNotFound)
 		data.ToJSON(&GenericError{Message: "Product not found in database"}, rw)
